--- a/home/dot_config/eww/powermenu/eww.scss
+++ b/home/dot_config/eww/powermenu/eww.scss
@@ -17,6 +17,8 @@
   background-color: lighten($background, 14%);
   border-radius: 24px;
   padding: 8px;
+  min-width: 155px;
+  min-height: 155px;
 }
 
 /** Generic window ***********************************/
@@ -24,6 +26,8 @@
   background-color: lighten($background, 12%);
   border-radius: 24px;
   padding: 6px;
+  min-width: 155px;
+  min-height: 155px;
 }
 
 /** Clock ********************************************/
@@ -54,6 +58,12 @@
   margin: 0px 0px 20px -35px;
 }
 
+// Clock widget container size
+.powermenu-clock {
+  min-width: 350px;
+  min-height: 155px;
+}
+
 /** Uptime ********************************************/
 .icontimer {
   color: $color1;
@@ -71,6 +81,12 @@
   color: $color2;
   font-size: 25px;
   font-weight: bold;
+}
+
+// Uptime widget container size
+.powermenu-uptime {
+  min-width: 350px;
+  min-height: 155px;
 }
 
 /** Power buttons ***************************************/
@@ -97,6 +113,31 @@
 }
 .btn_poweroff {
   color: $color13;
+}
+
+/** Close button ***************************************/
+.btn_close {
+  color: $foreground;
+  font-size: 48px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+/** Layout containers **********************************/
+.powermenu-container {
+  min-width: 1920px;
+  min-height: 1080px;
+  background-image: url($wallpaper);
+  background-color: rgba(0, 0, 0, 0.4);
+  background-blend-mode: darken;
+}
+
+.powermenu-close-wrapper {
+  padding: 20px 40px 0 0;
+}
+
+.powermenu-row {
+  margin: 0 0;
 }
 
 /** EOF *************************************************/
