feat: add Flameshot configuration and enhance screenshot script for Wayland support

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -45,6 +45,8 @@ set -eufo pipefail
   "flameshot"
   "graphicsmagick"
   "orchis-theme"
+  "xdg-desktop-portal"
+  "xdg-desktop-portal-hyprland"
   "pamixer"
   "playerctl"
   "pipewire-pulse"
