--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -60,11 +60,11 @@ set -eufo pipefail
 ) -}}
 
 {{ $aurPackages = concat $aurPackages (list
-  "cursor-bin"
   "numix-circle-icon-theme-git"
   "pamac-aur"
   "pwvucontrol"
   "skippy-xd"
+  "snappy-switcher"
   "wlogout"
   "nwg-look"
   "nwg-displays"
