--- a/home/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
@@ -3,6 +3,8 @@
 {{ $extensions := list
      "eamodio.gitlens"
      "EditorConfig.EditorConfig"
+     "github.copilot"
+     "github.copilot-chat"
      "ms-python.python"
      "redhat.vscode-yaml"
      "streetsidesoftware.code-spell-checker"
